Реализован контроллер групп
